# source-sdk-2013

./: .gitignore
mp/src/: CMakeLists.txt
mp/src/game/client/: CMakeLists.txt
mp/src/game/server/: CMakeLists.txt
mp/src/materialsystem/: CMakeLists.txt
mp/src/mathlib/: CMakeLists.txt
mp/src/public/: bitvec.h  filesystem_helpers.cpp
mp/src/public/mathlib/: vector.h
mp/src/public/tier0/: platform.h
mp/src/public/tier1/: convar.h  datamanager.h  functors.h  strtools.h
mp/src/raytrace/: CMakeLists.txt
mp/src/tier1/: CMakeLists.txt
mp/src/utils/sapi51/Include/: sphelper.h
mp/src/utils/serverplugin_sample/: CMakeLists.txt
mp/src/vgui2/: CMakeLists.txt
