add_library(materialsystem STATIC
        ../public/tier0/memoverride.cpp
        stdshaders/example_model_dx9.cpp
        stdshaders/BaseVSShader.cpp
        stdshaders/screenspace_general.cpp
        stdshaders/Bloom.cpp
        stdshaders/example_model_dx9_helper.cpp
        )
target_compile_options(materialsystem PRIVATE
        -Qunused-arguments
        -x c++
        -arch i386
        -fmessage-length=137
        -fmacro-backtrace-limit=0
        -fcolor-diagnostics
        -std=gnu++11
        -Wno-trigraphs
        -fpascal-strings
        -O0
        -Wno-missing-field-initializers
        -Wno-missing-prototypes
        -Wno-return-type
        -Wno-non-virtual-dtor
        -Wno-overloaded-virtual
        -Wno-exit-time-destructors
        -Wno-missing-braces
        -Wparentheses
        -Wswitch
        -Wno-unused-function
        -Wno-unused-label
        -Wno-unused-parameter
        -Wno-unused-variable
        -Wunused-value
        -Wno-empty-body
        -Wno-uninitialized
        -Wno-unknown-pragmas
        -Wno-shadow
        -Wno-four-char-constants
        -Wno-conversion
        -Wno-constant-conversion
        -Wno-int-conversion
        -Wno-bool-conversion
        -Wno-enum-conversion
        -Wno-shorten-64-to-32
        -Wno-newline-eof
        -Wno-c++11-extensions
        -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.12.sdk
        -fasm-blocks
        -ffast-math
        -fstrict-aliasing
        -Wdeprecated-declarations
        -Wno-invalid-offsetof
        -mmacosx-version-min=10.5
        -g
        -fvisibility=hidden
        -fvisibility-inlines-hidden
        -Wno-sign-conversion
        -Wno-infinite-recursion
        -Wno-move
        -Wno-deprecated-writable-strings
        -Wno-switch-enum
        -Wno-switch
        -Wno-unused-value
        -Wno-parentheses
        -Wno-logical-op-parentheses
        -Wno-c++11-narrowing
        -F/Users/jfmmeyers/source-sdk-2013/mp/src/build/Debug
        -Usprintf
        -Ustrncpy
        -UPROTECTED_THINGS_ENABLE
        -ftemplate-depth=512
        --serialize-diagnostics
        )
target_compile_definitions(materialsystem PRIVATE
        FORCE_QUICKTIME
        DX_TO_GL_ABSTRACTION
        _DLL_EXT=.dylib
        VPC
        POSIX
        QUICKTIME_VIDEO
        GAME_SHADER_DLL
        FAST_MATERIALVAR_ACCESS
        DLLNAME=game_shader_dx9
        _OSX
        _POSIX=1
        VPCGAME=hl2mp
        PROJECTDIR=/Users/jfmmeyers/source-sdk-2013/mp/src/vgui2/vgui_controls
        _DARWIN_UNLIMITED_SELECT
        PNG_NO_PEDANTIC_WARNINGS
        COMPILER_GCC
        OVERRIDE_V_DEFINES
        DEV_BUILD
        CPP11_NO_LIBCXX
        _EXTERNAL_DLL_EXT=.dylib
        VPROF_LEVEL=1
        NO_HOOK_MALLOC=1
        RAD_TELEMETRY_DISABLED
        FRAME_POINTER_OMISSION_DISABLED
        SOURCE1=1
        NO_MALLOC_OVERRIDE=1
        DEBUG
        USE_SDL
        FD_SETSIZE=10240
        OSX
        _DEBUG
        GNUC
        STDSHADER_DX9_DLL_EXPORT
        VPCGAMECAPS=HL2MP
        GL_GLEXT_PROTOTYPES
        )
target_include_directories(materialsystem PRIVATE
        /Users/jfmmeyers/source-sdk-2013/mp/src/common
        /Users/jfmmeyers/source-sdk-2013/mp/src/public
        /Users/jfmmeyers/source-sdk-2013/mp/src/public/tier0
        /Users/jfmmeyers/source-sdk-2013/mp/src/public/tier1
        /Users/jfmmeyers/source-sdk-2013/mp/src/thirdparty/SDL2
        /Users/jfmmeyers/source-sdk-2013/mp/src/materialsystem/stdshaders/fxctmp9
        /Users/jfmmeyers/source-sdk-2013/mp/src/materialsystem/stdshaders/vshtmp9
        /Users/jfmmeyers/source-sdk-2013/mp/src/build/Debug/include
        /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.12.sdk/usr/include/malloc
        /Users/jfmmeyers/source-sdk-2013/mp/src/build/everything.build/Debug/shaders
        /Users/jfmmeyers/source-sdk-2013/mp/src/build/everything.build/Debug/shaders
        )
target_include_directories(materialsystem SYSTEM PRIVATE
        )