add_library(materialsystem STATIC
        ../public/tier0/memoverride.cpp
        stdshaders/example_model_dx9.cpp
        stdshaders/BaseVSShader.cpp
        stdshaders/screenspace_general.cpp
        stdshaders/Bloom.cpp
        stdshaders/example_model_dx9_helper.cpp
        )
target_compile_definitions(materialsystem PRIVATE
        FORCE_QUICKTIME
        DX_TO_GL_ABSTRACTION
        _DLL_EXT=.dylib
        VPC
        POSIX
        QUICKTIME_VIDEO
        GAME_SHADER_DLL
        FAST_MATERIALVAR_ACCESS
        DLLNAME=game_shader_dx9
        _OSX
        _POSIX=1
        VPCGAME=hl2mp
        PROJECTDIR=${CMAKE_SOURCE_DIR}/vgui2/vgui_controls
        _DARWIN_UNLIMITED_SELECT
        PNG_NO_PEDANTIC_WARNINGS
        COMPILER_GCC
        OVERRIDE_V_DEFINES
        DEV_BUILD
        CPP11_NO_LIBCXX
        _EXTERNAL_DLL_EXT=.dylib
        VPROF_LEVEL=1
        NO_HOOK_MALLOC=1
        RAD_TELEMETRY_DISABLED
        FRAME_POINTER_OMISSION_DISABLED
        SOURCE1=1
        NO_MALLOC_OVERRIDE=1
        DEBUG
        USE_SDL
        FD_SETSIZE=10240
        OSX
        _DEBUG
        GNUC
        STDSHADER_DX9_DLL_EXPORT
        VPCGAMECAPS=HL2MP
        GL_GLEXT_PROTOTYPES
        )
target_include_directories(materialsystem PRIVATE
        ${CMAKE_SOURCE_DIR}/common
        ${CMAKE_SOURCE_DIR}/public
        ${CMAKE_SOURCE_DIR}/public/tier0
        ${CMAKE_SOURCE_DIR}/public/tier1
        ${CMAKE_SOURCE_DIR}/thirdparty/SDL2
        ${CMAKE_SOURCE_DIR}/materialsystem/stdshaders/fxctmp9
        ${CMAKE_SOURCE_DIR}/materialsystem/stdshaders/vshtmp9
        ${CMAKE_SOURCE_DIR}/build/Debug/include
        ${CMAKE_SOURCE_DIR}/build/everything.build/Debug/shaders
        ${CMAKE_SOURCE_DIR}/build/everything.build/Debug/shaders
        )
target_include_directories(materialsystem SYSTEM PRIVATE
        )