add_library(mathlib STATIC
        imagequant.cpp
        spherical.cpp
        randsse.cpp
        vmatrix.cpp
        almostequal.cpp
        IceKey.cpp
        polyhedron.cpp
        lightdesc.cpp
        bumpvects.cpp
        sse.cpp
        powsse.cpp
        anorms.cpp
        mathlib_base.cpp
        sseconst.cpp
        simdvectormatrix.cpp
        color_conversion.cpp
        ssenoise.cpp
        halton.cpp
        vector.cpp
        sparse_convolution_noise.cpp
        quantize.cpp
        )
target_compile_options(mathlib PRIVATE
        -Qunused-arguments
        -x c++
        -arch i386
        -fmessage-length=137
        -fmacro-backtrace-limit=0
        -fcolor-diagnostics
        -std=gnu++11
        -Wno-trigraphs
        -fpascal-strings
        -O0
        -Wno-missing-field-initializers
        -Wno-missing-prototypes
        -Wno-return-type
        -Wno-non-virtual-dtor
        -Wno-overloaded-virtual
        -Wno-exit-time-destructors
        -Wno-missing-braces
        -Wparentheses
        -Wswitch
        -Wno-unused-function
        -Wno-unused-label
        -Wno-unused-parameter
        -Wno-unused-variable
        -Wunused-value
        -Wno-empty-body
        -Wno-uninitialized
        -Wno-unknown-pragmas
        -Wno-shadow
        -Wno-four-char-constants
        -Wno-conversion
        -Wno-constant-conversion
        -Wno-int-conversion
        -Wno-bool-conversion
        -Wno-enum-conversion
        -Wno-shorten-64-to-32
        -Wno-newline-eof
        -Wno-c++11-extensions

        -fasm-blocks
        -ffast-math
        -fstrict-aliasing
        -Wdeprecated-declarations
        -Wno-invalid-offsetof
        -mmacosx-version-min=10.5
        -g
        -fvisibility=hidden
        -fvisibility-inlines-hidden
        -Wno-sign-conversion
        -Wno-infinite-recursion
        -Wno-move
        -Wno-deprecated-writable-strings
        -Wno-switch-enum
        -Wno-switch
        -Wno-unused-value
        -Wno-parentheses
        -Wno-logical-op-parentheses
        -Wno-c++11-narrowing
        -F${CMAKE_SOURCE_DIR}/build/Debug
        -Usprintf
        -Ustrncpy
        -UPROTECTED_THINGS_ENABLE
        -ftemplate-depth=512
        --serialize-diagnostics
        )
target_compile_definitions(mathlib PRIVATE
        FORCE_QUICKTIME
        DX_TO_GL_ABSTRACTION
        _DLL_EXT=.dylib
        POSIX
        QUICKTIME_VIDEO
        VPC
        _OSX
        _POSIX=1
        VPCGAME=hl2mp
        PROJECTDIR=${CMAKE_SOURCE_DIR}/vgui2/vgui_controls
        _DARWIN_UNLIMITED_SELECT
        PNG_NO_PEDANTIC_WARNINGS
        COMPILER_GCC
        OVERRIDE_V_DEFINES
        DEV_BUILD
        CPP11_NO_LIBCXX
        _EXTERNAL_DLL_EXT=.dylib
        VPROF_LEVEL=1
        NO_HOOK_MALLOC=1
        RAD_TELEMETRY_DISABLED
        FRAME_POINTER_OMISSION_DISABLED
        SOURCE1=1
        NO_MALLOC_OVERRIDE=1
        DEBUG
        MATHLIB_LIB
        USE_SDL
        FD_SETSIZE=10240
        OSX
        _DEBUG
        GNUC
        VPCGAMECAPS=HL2MP
        GL_GLEXT_PROTOTYPES
        )
target_include_directories(mathlib PRIVATE
        ${CMAKE_SOURCE_DIR}/common
        ${CMAKE_SOURCE_DIR}/public
        ${CMAKE_SOURCE_DIR}/public/tier0
        ${CMAKE_SOURCE_DIR}/public/tier1
        ${CMAKE_SOURCE_DIR}/thirdparty/SDL2
        ${CMAKE_SOURCE_DIR}/public/mathlib
        ${CMAKE_SOURCE_DIR}/build/Debug/include
        /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.12.sdk/usr/include/malloc
        ${CMAKE_SOURCE_DIR}/build/everything.build/Debug/mathlib.build/DerivedSources/i386
        ${CMAKE_SOURCE_DIR}/build/everything.build/Debug/mathlib.build/DerivedSources
        )
target_include_directories(mathlib SYSTEM PRIVATE
        )