add_library(mathlib STATIC
        imagequant.cpp
        spherical.cpp
        randsse.cpp
        vmatrix.cpp
        almostequal.cpp
        IceKey.cpp
        polyhedron.cpp
        lightdesc.cpp
        bumpvects.cpp
        sse.cpp
        powsse.cpp
        anorms.cpp
        mathlib_base.cpp
        sseconst.cpp
        simdvectormatrix.cpp
        color_conversion.cpp
        ssenoise.cpp
        halton.cpp
        vector.cpp
        sparse_convolution_noise.cpp
        quantize.cpp
        )

target_compile_definitions(mathlib PRIVATE
        FORCE_QUICKTIME
        DX_TO_GL_ABSTRACTION
        _DLL_EXT=.dylib
        POSIX
        QUICKTIME_VIDEO
        VPC
        _OSX
        _POSIX=1
        VPCGAME=hl2mp
        PROJECTDIR=${CMAKE_SOURCE_DIR}/vgui2/vgui_controls
        _DARWIN_UNLIMITED_SELECT
        PNG_NO_PEDANTIC_WARNINGS
        COMPILER_GCC
        OVERRIDE_V_DEFINES
        DEV_BUILD
        CPP11_NO_LIBCXX
        _EXTERNAL_DLL_EXT=.dylib
        VPROF_LEVEL=1
        NO_HOOK_MALLOC=1
        RAD_TELEMETRY_DISABLED
        FRAME_POINTER_OMISSION_DISABLED
        SOURCE1=1
        NO_MALLOC_OVERRIDE=1
        DEBUG
        MATHLIB_LIB
        USE_SDL
        FD_SETSIZE=10240
        OSX
        _DEBUG
        GNUC
        VPCGAMECAPS=HL2MP
        GL_GLEXT_PROTOTYPES
        )
target_include_directories(mathlib PRIVATE
        ${CMAKE_SOURCE_DIR}/common
        ${CMAKE_SOURCE_DIR}/public
        ${CMAKE_SOURCE_DIR}/public/tier0
        ${CMAKE_SOURCE_DIR}/public/tier1
        ${CMAKE_SOURCE_DIR}/thirdparty/SDL2
        ${CMAKE_SOURCE_DIR}/public/mathlib
        ${CMAKE_SOURCE_DIR}/build/Debug/include
        ${CMAKE_SOURCE_DIR}/build/everything.build/Debug/mathlib.build/DerivedSources/i386
        ${CMAKE_SOURCE_DIR}/build/everything.build/Debug/mathlib.build/DerivedSources
        )
target_include_directories(mathlib SYSTEM PRIVATE
        )