add_library(raytrace STATIC
        trace3.cpp
        raytrace.cpp
        trace2.cpp
        )
target_compile_definitions(raytrace PRIVATE
        OSX
        FORCE_QUICKTIME
        DX_TO_GL_ABSTRACTION
        _DLL_EXT=.dylib
        NO_MALLOC_OVERRIDE=1
        POSIX
        QUICKTIME_VIDEO
        GNUC
        USE_SDL
        VPC
        _OSX
        _POSIX=1
        FRAME_POINTER_OMISSION_DISABLED
        FD_SETSIZE=10240
        VPCGAME=hl2mp
        DEBUG
        PROJECTDIR=${CMAKE_SOURCE_DIR}/vgui2/vgui_controls
        _DARWIN_UNLIMITED_SELECT
        PNG_NO_PEDANTIC_WARNINGS
        -DCOMPILER_GCC
        OVERRIDE_V_DEFINES
        DEV_BUILD
        CPP11_NO_LIBCXX
        SOURCE1=1
        _EXTERNAL_DLL_EXT=.dylib
        VPROF_LEVEL=1
        VPCGAMECAPS=HL2MP
        NO_HOOK_MALLOC=1
        GL_GLEXT_PROTOTYPES
        _DEBUG
        RAD_TELEMETRY_DISABLED
        )
target_include_directories(raytrace PRIVATE
        ${CMAKE_SOURCE_DIR}/common
        ${CMAKE_SOURCE_DIR}/public
        ${CMAKE_SOURCE_DIR}/public/tier0
        ${CMAKE_SOURCE_DIR}/public/tier1
        ${CMAKE_SOURCE_DIR}/thirdparty/SDL2
        ${CMAKE_SOURCE_DIR}/utils/common
        ${CMAKE_SOURCE_DIR}/build/Debug/include
        ${CMAKE_SOURCE_DIR}/build/everything.build/Debug/raytrace.build/DerivedSources/i386
        ${CMAKE_SOURCE_DIR}/build/everything.build/Debug/raytrace.build/DerivedSources
        )
target_include_directories(raytrace SYSTEM PRIVATE
        )