add_library(vgui2 STATIC
        vgui_controls/perforcefilelistframe.cpp
        vgui_controls/ProgressBox.cpp
        src/vgui_key_translation.cpp
        vgui_controls/BuildModeDialog.cpp
        vgui_controls/ComboBox.cpp
        vgui_controls/AnimatingImagePanel.cpp
        vgui_controls/TreeViewListControl.cpp
        vgui_controls/RotatingProgressBar.cpp
        vgui_controls/Splitter.cpp
        vgui_controls/CheckButton.cpp
        vgui_controls/TextEntry.cpp
        vgui_controls/Button.cpp
        vgui_controls/RichText.cpp
        vgui_controls/ListPanel.cpp
        vgui_controls/KeyBoardEditorDialog.cpp
        vgui_controls/BitmapImagePanel.cpp
        vgui_controls/ImagePanel.cpp
        vgui_controls/subrectimage.cpp
        vgui_controls/MenuBar.cpp
        vgui_controls/Image.cpp
        vgui_controls/Divider.cpp
        vgui_controls/FocusNavGroup.cpp
        vgui_controls/QueryBox.cpp
        vgui_controls/MenuItem.cpp
        vgui_controls/ScrollBar.cpp
        vgui_controls/CheckButtonList.cpp
        vgui_controls/ScrollBarSlider.cpp
        vgui_controls/RadioButton.cpp
        vgui_controls/WizardSubPanel.cpp
        vgui_controls/Menu.cpp
        vgui_controls/ToggleButton.cpp
        vgui_controls/EditablePanel.cpp
        vgui_controls/URLLabel.cpp
        vgui_controls/Tooltip.cpp
        vgui_controls/CvarToggleCheckButton.cpp
        vgui_controls/SectionedListPanel.cpp
        vgui_controls/MenuButton.cpp
        vgui_controls/ScalableImagePanel.cpp
        vgui_controls/PanelListPanel.cpp
        vgui_controls/Slider.cpp
        vgui_controls/CircularProgressBar.cpp
        vgui_controls/ToolWindow.cpp
        ../public/filesystem_helpers.cpp
        vgui_controls/ImageList.cpp
        vgui_controls/Label.cpp
        vgui_controls/BuildGroup.cpp
        vgui_controls/AnalogBar.cpp
        vgui_controls/HTML.cpp
        vgui_controls/ListViewPanel.cpp
        vgui_controls/FileOpenDialog.cpp
        vgui_controls/DirectorySelectDialog.cpp
        vgui_controls/TextImage.cpp
        vgui_controls/FileOpenStateMachine.cpp
        vgui_controls/InputDialog.cpp
        vgui_controls/controls.cpp
        vgui_controls/AnimationController.cpp
        vgui_controls/Frame.cpp
        vgui_controls/PerforceFileList.cpp
        vgui_controls/savedocumentquery.cpp
        vgui_controls/ProgressBar.cpp
        vgui_controls/consoledialog.cpp
        vgui_controls/PropertyPage.cpp
        vgui_controls/TreeView.cpp
        vgui_controls/GraphPanel.cpp
        vgui_controls/PerforceFileExplorer.cpp
        vgui_controls/ExpandButton.cpp
        vgui_controls/KeyRepeat.cpp
        vgui_controls/PropertyDialog.cpp
        vgui_controls/MessageDialog.cpp
        vgui_controls/KeyBindingHelpDialog.cpp
        vgui_controls/BuildFactoryHelper.cpp
        vgui_controls/ControllerMap.cpp
        vgui_controls/PropertySheet.cpp
        vgui_controls/Panel.cpp
        vgui_controls/ScrollableEditablePanel.cpp
        vgui_controls/WizardPanel.cpp
        vgui_controls/MessageBox.cpp
        )
target_compile_options(vgui2 PRIVATE
        -Qunused-arguments
        -arch i386
        -fmessage-length=137
        -fmacro-backtrace-limit=0
        -fcolor-diagnostics
        -std=gnu++11
        -Wno-trigraphs
        -fpascal-strings
        -O0
        -Wno-missing-field-initializers
        -Wno-missing-prototypes
        -Wno-return-type
        -Wno-non-virtual-dtor
        -Wno-overloaded-virtual
        -Wno-exit-time-destructors
        -Wno-missing-braces
        -Wparentheses
        -Wswitch
        -Wno-unused-function
        -Wno-unused-label
        -Wno-unused-parameter
        -Wno-unused-variable
        -Wunused-value
        -Wno-empty-body
        -Wno-uninitialized
        -Wno-unknown-pragmas
        -Wno-shadow
        -Wno-four-char-constants
        -Wno-conversion
        -Wno-constant-conversion
        -Wno-int-conversion
        -Wno-bool-conversion
        -Wno-enum-conversion
        -Wno-shorten-64-to-32
        -Wno-newline-eof
        -Wno-c++11-extensions
        -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.12.sdk
        -fasm-blocks
        -ffast-math
        -fstrict-aliasing
        -Wdeprecated-declarations
        -Wno-invalid-offsetof
        -mmacosx-version-min=10.5
        -g
        -fvisibility=hidden
        -fvisibility-inlines-hidden
        -Wno-sign-conversion
        -Wno-infinite-recursion
        -Wno-move
        -Wno-deprecated-writable-strings
        -Wno-switch-enum
        -Wno-switch
        -Wno-unused-value
        -Wno-parentheses
        -Wno-logical-op-parentheses
        -Wno-c++11-narrowing
        -F/Users/jfmmeyers/source-sdk-2013/mp/src/build/Debug
        -Usprintf
        -Ustrncpy
        -UPROTECTED_THINGS_ENABLE
        -ftemplate-depth=512
        --serialize-diagnostics
        )
target_compile_definitions(vgui2 PRIVATE
        OSX
        FORCE_QUICKTIME
        DX_TO_GL_ABSTRACTION
        _DLL_EXT=.dylib
        NO_MALLOC_OVERRIDE=1
        POSIX
        QUICKTIME_VIDEO
        GNUC
        USE_SDL
        VPC
        _OSX
        _POSIX=1
        FRAME_POINTER_OMISSION_DISABLED
        FD_SETSIZE=10240
        VPCGAME=hl2mp
        DEBUG
        PROJECTDIR=/Users/jfmmeyers/source-sdk-2013/mp/src/vgui2/vgui_controls
        _DARWIN_UNLIMITED_SELECT
        PNG_NO_PEDANTIC_WARNINGS
        COMPILER_GCC
        OVERRIDE_V_DEFINES
        DEV_BUILD
        CPP11_NO_LIBCXX
        SOURCE1=1
        _EXTERNAL_DLL_EXT=.dylib
        VPROF_LEVEL=1
        VPCGAMECAPS=HL2MP
        NO_HOOK_MALLOC=1
        GL_GLEXT_PROTOTYPES
        _DEBUG
        RAD_TELEMETRY_DISABLED
        )
target_include_directories(vgui2 PRIVATE
        /Users/jfmmeyers/source-sdk-2013/mp/src/common
        /Users/jfmmeyers/source-sdk-2013/mp/src/public
        /Users/jfmmeyers/source-sdk-2013/mp/src/public/tier0
        /Users/jfmmeyers/source-sdk-2013/mp/src/public/tier1
        /Users/jfmmeyers/source-sdk-2013/mp/src/thirdparty/SDL2
        /Users/jfmmeyers/source-sdk-2013/mp/src/vgui2/vgui_controls/generated_proto
        /Users/jfmmeyers/source-sdk-2013/mp/src/thirdparty/protobuf-2.3.0/src
        /Users/jfmmeyers/source-sdk-2013/mp/src/thirdparty
        /Users/jfmmeyers/source-sdk-2013/mp/src/thirdparty/cef
        /Users/jfmmeyers/source-sdk-2013/mp/src/vgui2/vgui_controls/generated_proto
        /Users/jfmmeyers/source-sdk-2013/mp/src/build/Debug/include
        /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.12.sdk/usr/include/malloc
        /Users/jfmmeyers/source-sdk-2013/mp/src/build/everything.build/Debug/vgui_controls.build/DerivedSources/i386
        /Users/jfmmeyers/source-sdk-2013/mp/src/build/everything.build/Debug/vgui_controls.build/DerivedSources
        )
target_include_directories(vgui2 SYSTEM PRIVATE
        )
